; ModuleID = '/home/carl/AnghaBench/disque/src/extr_networking.c_getClientTypeName.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_networking.c_getClientTypeName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"normal\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @getClientTypeName(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %6 [
    i32 128, label %5
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %7

6:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %7

7:                                                ; preds = %6, %5
  %8 = load i8*, i8** %2, align 8
  ret i8* %8
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
